# BurgWarMasterServer

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docker/: redis.conf
src/: main.rs
