[package]
name = "bw_server_browser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "3.x"
base64 = "0.13"
env_logger = "0.9"
r2d2_redis = "0.14"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
